<resources>
    <string name="app_name">Bill Please</string>
    <string name="pax">Number of people</string>
    <string name="svc">Service Charge</string>
    <string name="gst">GST</string>
    <string name="calc">Calculate</string>
    <string name="reset">reset</string>
    <string name="price">$00.00</string>
    <string name="discount">%</string>
    <string name="netPrice">Net Price: </string>
    <string name="pperson">Per Pax: </string>
    <string name="tvmessage" />

</resources>
